new hero section added.

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
   <!-- Navbar -->
   <div class="navbar">
-    <div class="logo">🚚 Packers <span style="color:#ff6600;">AND</span> Movers</div>
+    <div class="logo">Packers <span style="color:#ff6600;">AND</span> Movers</div>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
@@ -634,7 +634,7 @@
   <div class="hero">
     <div class="hero-text">
       <h1 style="color: #002147;">#No.1 Packing And Moving Company!</h1>
-      <p style="color: #002147;">Start here... new places made easier with us.</p>
+      <p style="color: #002147;">the website will be live soon...</p>
       <button class="btn"><i class="fa-solid fa-phone"></i> <a href="tel:+919876543210">Call Now</a></button>
       <button class="btn">Get Quote</button>
     </div>
@@ -678,7 +678,7 @@
         <p>
           JRW Packers and Movers in India are one of the top-most trusted names in relocation services. 
           We specialize in <strong>Packing & Moving, Home Relocation, Office Moving, Bike & Car Transport, 
-          Sea Freight Cargo, and Warehouse Storage</strong>.  
+          Sea Freight Cargo, and Warehouse Storage</strong>  
         </p>
         <p>
           With a strong nationwide network, we ensure <strong>safe, reliable, and affordable</strong> services 
